--- a/tex/bibliography.bib
+++ b/tex/bibliography.bib
@@ -37,7 +37,7 @@
 @online{github-repo,
   title = {{MPS}},
   author = {Jakub Charvot},
-  howpublished = {{commit 123] [online}},
+  howpublished = {{commit ea33ac1] [online}},
   edition= {GitHub},
   url = {https://github.com/charvotj/MPS},
   urldate = {2023-05-03}
